--- a/CampusLearn/CampusLearn/src/main/resources/application.properties
+++ b/CampusLearn/CampusLearn/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 spring.application.name=CampusLearn
-
-# PostgreSQL Connection Settings
 spring.datasource.url=jdbc:postgresql://localhost:5433/campuslearn
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-# JPA/Hibernate Settings
-# 'update' creates/updates the database tables based on your User.java entity
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
