--- a/CampusLearn/CampusLearn/src/main/resources/application.properties
+++ b/CampusLearn/CampusLearn/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
+file.upload-dir=uploads/learning_materials/
