--- a/CampusLearn/CampusLearn/src/main/resources/application.properties
+++ b/CampusLearn/CampusLearn/src/main/resources/application.properties
@@ -11,3 +11,17 @@ spring.sql.init.mode=always
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
 file.upload-dir=uploads/learning_materials/
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+
+spring.mail.username=eqtpigeon@gmail.com 
+
+spring.mail.password=qsxz jpfb ejpw yjzl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+frontend.url=http://localhost:5173
