--- a/CampusLearn/front_end/package.json
+++ b/CampusLearn/front_end/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.25.0",
     "@tailwindcss/postcss": "^4.1.14",
     "axios": "^1.12.2",
+    "marked": "^16.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
@@ -20,7 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/node": "^24.6.0",
+    "@types/node": "^24.9.1",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
