--- a/CampusLearn/CampusLearn/src/main/resources/application.properties
+++ b/CampusLearn/CampusLearn/src/main/resources/application.properties
@@ -25,3 +25,7 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
 frontend.url=http://localhost:5173
+
+cloudinary.cloud.name=dok2upoez
+cloudinary.api.key=165989517669629
+cloudinary.api.secret=xNCr_-nIUrEy9tTbdsqvX1-AWVc
