--- a/CampusLearn/CampusLearn/src/main/resources/application.properties
+++ b/CampusLearn/CampusLearn/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=CampusLearn
-spring.datasource.url=jdbc:postgresql://localhost:5433/campuslearn
-spring.datasource.username=postgres
-spring.datasource.password=1212
+
+# ----------------- CRITICAL DEPLOYMENT CHANGES -----------------
+# DATABASE: These lines now use Environment Variables injected by the cloud host
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/campuslearn}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:1212}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# FRONTEND: Uses the FRONTEND_URL environment variable (used by SecurityConfig)
+frontend.url=${FRONTEND_URL:http://localhost:5173}
+# -------------------------------------------------------------
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -14,17 +22,13 @@ file.upload-dir=uploads/learning_materials/
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-
 spring.mail.username=eqtpigeon@gmail.com 
-
 spring.mail.password=qsxz jpfb ejpw yjzl
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
-
-frontend.url=http://localhost:5173
 
 cloudinary.cloud.name=dok2upoez
 cloudinary.api.key=165989517669629
