--- a/CampusLearn/front_end/tsconfig.app.json
+++ b/CampusLearn/front_end/tsconfig.app.json
@@ -18,7 +18,7 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
+    // "noUnusedLocals": true, <-- REMOVED THIS LINE
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
