--- a/CampusLearn/front_end/package.json
+++ b/CampusLearn/front_end/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b --noEmitOnError false && vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -38,5 +38,3 @@
     "vite": "^7.1.9"
   }
 }
-
-
