--- a/CampusLearn/CampusLearn/src/main/resources/application.properties
+++ b/CampusLearn/CampusLearn/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=CampusLearn
 
-# ----------------- CRITICAL DEPLOYMENT CHANGES -----------------
-# DATABASE: These lines now use Environment Variables injected by the cloud host
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/campuslearn}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:1234}
+# ----------------- FINAL DEFINITIVE DEPLOYMENT FIX -----------------
+# We are hardcoding the exact live credentials to eliminate ALL deployment and environment variable issues.
+
+# DATABASE:
+spring.datasource.url=jdbc:postgresql://dpg-d3rtp3u3jp1c73egjsa0-a.oregon-postgres.render.com/campuslearn_db_final
+spring.datasource.username=campuslearn_db_final_user
+spring.datasource.password=6QEBhOcYdfRuGBSZAjDlLX1pUT3uSN9A
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # FRONTEND: Uses the FRONTEND_URL environment variable (used by SecurityConfig)
