--- a/CampusLearn/CampusLearn/src/main/resources/application.properties
+++ b/CampusLearn/CampusLearn/src/main/resources/application.properties
@@ -10,7 +10,8 @@ spring.datasource.password=6QEBhOcYdfRuGBSZAjDlLX1pUT3uSN9A
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # FRONTEND: Uses the FRONTEND_URL environment variable (used by SecurityConfig)
-frontend.url=${FRONTEND_URL:http://localhost:5173}
+# *** ACTION REQUIRED: REPLACE THE PLACEHOLDER BELOW with your LIVE FRONTEND URL (e.g., https://my-frontend.onrender.com) ***
+frontend.url=https://campuslearn-frontend.onrender.com
 # -------------------------------------------------------------
 
 spring.jpa.hibernate.ddl-auto=update
