--- a/CampusLearn/CampusLearn/src/main/resources/application.properties
+++ b/CampusLearn/CampusLearn/src/main/resources/application.properties
@@ -4,13 +4,15 @@ spring.application.name=CampusLearn
 # We are hardcoding the exact live credentials to eliminate ALL deployment and environment variable issues.
 
 # DATABASE:
-spring.datasource.url=jdbc:postgresql://dpg-d3rtp3u3jp1c73egjsa0-a.oregon-postgres.render.com/campuslearn_db_final
+# *** CRITICAL FIX: The port (:5432) must be explicitly included in the URL for Render's firewall to allow the connection. ***
+spring.datasource.url=jdbc:postgresql://dpg-d3rtp3u3jp1c73egjsa0-a.oregon-postgres.render.com:5432/campuslearn_db_final
 spring.datasource.username=campuslearn_db_final_user
 spring.datasource.password=6QEBhOcYdfRuGBSZAjDlLX1pUT3uSN9A
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # FRONTEND: Uses the FRONTEND_URL environment variable (used by SecurityConfig)
-# *** ACTION REQUIRED: REPLACE THE PLACEHOLDER BELOW with your LIVE FRONTEND URL (e.g., https://my-frontend.onrender.com) ***
+# NOTE: The value below is used as the fallback if the ENV variable is missing. 
+#       We recommend keeping the `FRONTEND_URL` environment variable set correctly on Render to override this for safety.
 frontend.url=https://campuslearn-frontend.onrender.com
 # -------------------------------------------------------------
 
